--- a/package.json
+++ b/package.json
@@ -1,27 +1,32 @@
 {
-  "name": "next-13-login-page",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "mongoose": "^8.0.4",
-    "next": "13.5.6",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.49.3",
-    "styled-components": "^6.1.8"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.6",
-    "typescript": "^5"
-  }
+	"name": "next-13-login-page",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"connect-seed": "tsc src/app/api/lib/seed.ts && node src/app/api/lib/seed.js"
+	},
+	"dependencies": {
+		"bcryptjs": "^2.4.3",
+		"dotenv": "^16.3.1",
+		"mongoose": "^8.0.4",
+		"next": "13.5.6",
+		"next-auth": "^4.24.5",
+		"react": "^18",
+		"react-dom": "^18",
+		"react-hook-form": "^7.49.3",
+		"styled-components": "^6.1.8"
+	},
+	"devDependencies": {
+		"@types/bcryptjs": "^2.4.6",
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"eslint": "^8",
+		"eslint-config-next": "13.5.6",
+		"typescript": "^5"
+	}
 }
