--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"compilerOptions": {
-		"target": "es5",
+		"target": "es6",
 		"lib": ["dom", "dom.iterable", "esnext"],
 		"allowJs": true,
 		"skipLibCheck": true,
@@ -20,8 +20,17 @@
 		],
 		"paths": {
 			"@/*": ["./src/*"]
-		}
+		},
+		"typeRoots": ["./typings", "./vendor/types"]
 	},
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/page.jsx"],
+	"include": [
+		"next-env.d.ts",
+		"**/*.ts",
+		"**/*.tsx",
+		".next/types/**/*.ts",
+		"src/app/page.jsx",
+		"src/app/providers.js",
+		"src/app/api/auth/[...nextauth]/route.js"
+	],
 	"exclude": ["node_modules"]
 }
